# Surfacer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
assets/: banner.src.html
src/: App.css  App.jsx  OverlayApp.css  OverlayApp.jsx  TrayApp.css  TrayApp.jsx  api.js  index.css  main.jsx  status.js  textUtils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  tray.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  screenshot.rs  settings.rs
src/components/: Board.jsx  BulletinBoard.jsx  Card.jsx  Column.jsx  MeshGradient.jsx  ProjectModal.jsx  SettingsModal.jsx  TrashView.jsx  WelcomeCard.css  WelcomeCard.jsx
src/hooks/: useBoard.js  useUploadsDir.js
